<resources>
    <string name="search_providers_list_key" translatable="false">search_providers_list</string>
    <string name="locale_key" translatable="false">app_locale</string>
    <string name="search_types_list_key" translatable="false">search_type_list</string>
    <string name="auto_update_key" translatable="false">auto_update</string>
    <string name="auto_update_plugins_key" translatable="false">auto_update_plugins</string>
    <string name="auto_download_plugins_key" translatable="false">auto_download_plugins_key</string>
    <string name="skip_update_key" translatable="false">skip_update_key</string>
    <string name="prerelease_update_key" translatable="false">prerelease_update</string>
    <string name="manual_check_update_key" translatable="false">manual_check_update</string>
    <string name="fast_forward_button_time_key" translatable="false">fast_forward_button_time</string>
    <string name="benene_count" translatable="false">benene_count</string>
    <string name="subtitle_settings_key" translatable="false">subtitle_settings_key</string>
    <string name="test_providers_key" translatable="false">test_providers_key</string>
    <string name="subtitle_settings_chromecast_key" translatable="false">subtitle_settings_chromecast_key</string>
    <string name="quality_pref_key" translatable="false">quakitsu_settingslity_pref_key</string>
    <string name="player_pref_key" translatable="false">player_pref_key</string>
    <string name="prefer_limit_title_key" translatable="false">prefer_limit_title_key</string>
    <string name="prefer_limit_title_rez_key" translatable="false">prefer_limit_title_rez_key</string>
    <string name="apk_installer_key" translatable="false">apk_installer_key</string>
    <string name="video_buffer_size_key" translatable="false">video_buffer_size_key</string>
    <string name="video_buffer_length_key" translatable="false">video_buffer_length_key</string>
    <string name="video_buffer_clear_key" translatable="false">video_buffer_clear_key</string>
    <string name="video_buffer_disk_key" translatable="false">video_buffer_disk_key</string>
    <string name="use_system_brightness_key" translatable="false">use_system_brightness_key</string>
    <string name="swipe_enabled_key" translatable="false">swipe_enabled_key</string>
    <string name="playback_speed_enabled_key" translatable="false">playback_speed_enabled_key</string>
    <string name="player_resize_enabled_key" translatable="false">player_resize_enabled_key</string>
    <string name="pip_enabled_key" translatable="false">pip_enabled_key</string>
    <string name="double_tap_enabled_key" translatable="false">double_tap_enabled_key</string>
    <string name="double_tap_pause_enabled_key" translatable="false">double_tap_pause_enabled_key</string>
    <string name="double_tap_seek_time_key" translatable="false">double_tap_seek_time_key2</string>
    <string name="android_tv_interface_off_seek_key" translatable="false">android_tv_interface_off_seek_key</string>
    <string name="android_tv_interface_on_seek_key" translatable="false">android_tv_interface_on_seek_key</string>
    <string name="swipe_vertical_enabled_key" translatable="false">swipe_vertical_enabled_key</string>
    <string name="autoplay_next_key" translatable="false">autoplay_next_key</string>
    <string name="display_sub_key" translatable="false">display_sub_key</string>
    <string name="show_fillers_key" translatable="false">show_fillers_key</string>
    <string name="show_trailers_key" translatable="false">show_trailers_key</string>
    <string name="show_kitsu_posters_key" translatable="false">show_kitsu_posters_key</string>
    <string name="random_button_key" translatable="false">random_button_key</string>
    <string name="provider_lang_key" translatable="false">provider_lang_key</string>
    <string name="dns_key" translatable="false">dns_key</string>
    <string name="download_path_key" translatable="false">download_path_key</string>
    <string name="app_name_download_path" translatable="false">SunStream</string>
    <string name="app_layout_key" translatable="false">app_layout_key</string>
    <string name="primary_color_key" translatable="false">primary_color_key</string>
    <string name="restore_key" translatable="false">restore_key</string>
    <string name="backup_key" translatable="false">backup_key</string>
    <string name="prefer_media_type_key" translatable="false">prefer_media_type_key_2</string>
    <string name="app_theme_key" translatable="false">app_theme_key</string>
    <string name="episode_sync_enabled_key" translatable="false">episode_sync_enabled_key</string>
    <string name="log_enabled_key" translatable="false">log_enabled_key</string>
    <string name="show_logcat_key" translatable="false">show_logcat_key</string>
    <string name="bottom_title_key" translatable="false">bottom_title_key</string>
    <string name="poster_ui_key" translatable="false">poster_ui_key</string>
    <string name="subtitles_encoding_key" translatable="false">subtitles_encoding_key</string>
    <string name="override_site_key" translatable="false">override_site_key</string>
    <string name="enabled_meta_providers_key" translatable="false">enabled_meta_providers_key</string>
    <string name="enabled_direct_providers_key" translatable="false">enabled_direct_providers_key</string>
    <string name="enable_local_server_key" translatable="false">enable_local_server</string>
    <string name="show_local_ip_key" translatable="false">show_local_ip_key</string>
    <string name="redo_setup_key" translatable="false">redo_setup_key</string>
    <string name="filter_sub_lang_key" translatable="false">filter_sub_lang_key</string>
    <string name="enable_nsfw_on_providers_key" translatable="false">enable_nsfw_on_providers_key</string>
    <string name="enable_skip_op_from_database" translatable="false">enable_skip_op_from_database</string>
    <string name="extra_info_format" formatted="true" translatable="false">%d %s | %s</string>
    <string name="storage_size_format" formatted="true" translatable="false">%s • %s</string>
    <string name="download_size_format" formatted="true" translatable="false">%s / %s</string>
    <string name="episode_name_format" formatted="true" translatable="false">%s %s</string>
    <string name="ffw_text_format" formatted="true" translatable="false">+%d</string>
    <string name="rew_text_format" formatted="true" translatable="false">-%d</string>
    <string name="ffw_text_regular_format" formatted="true" translatable="false">%d</string>
    <string name="rew_text_regular_format" formatted="true" translatable="false">%d</string>
    <string name="rating_format" formatted="true" translatable="false">%.1f/10.0</string>
    <string name="year_format" formatted="true" translatable="false">%d</string>
    <string name="app_dub_sub_episode_text_format" formatted="true">%s Ep %d</string>
    <string name="cast_format" formatted="true">Cast: %s</string>
    <string name="next_episode_format" formatted="true">Episode %d will be released in</string>
    <string name="next_episode_time_day_format" formatted="true">%dd %dh %dm</string>
    <string name="next_episode_time_hour_format" formatted="true">%dh %dm</string>
    <string name="next_episode_time_min_format" formatted="true">%dm</string>
    <string name="result_poster_img_des">Poster</string>
    <string name="search_poster_img_des">Poster</string>
    <string name="episode_poster_img_des">Episode Poster</string>
    <string name="home_main_poster_img_des">Main Poster</string>
    <string name="home_next_random_img_des">Next Random</string>
    <string name="episode_play_img_des" translatable="false">@string/play_episode</string>
    <string name="go_back_img_des">Go back</string>
    <string name="change_providers_img_des" translatable="false">@string/home_change_provider_img_des</string>
    <string name="home_change_provider_img_des">Change Provider</string>
    <string name="preview_background_img_des">Preview Background</string>
    <string name="player_speed_text_format" formatted="true">Speed (%.2fx)</string>
    <string name="rated_format" formatted="true">Rated: %.1f</string>
    <string name="new_update_format" formatted="true">New update found!\n%s -&gt; %s</string>
    <string name="filler" formatted="true">Filler</string>
    <string name="duration_format" formatted="true">%d min</string>
    <string name="app_name">SunStream</string>
    <string name="play_with_app_name">Play with SunStream</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_settings">Settings</string>
    <string name="title_providers">Providers</string>
    <string name="title_about">About</string>
    <string name="search_hint">Search…</string>
    <string name="search_hint_site" formatted="true">Search %s…</string>
    <string name="no_data">No Data</string>
    <string name="episode_more_options_des">More Options</string>
    <string name="next_episode">Next episode</string>
    <string name="result_plot" translatable="false">@string/synopsis</string>
    <string name="result_tags">Genres</string>
    <string name="result_share">Share</string>
    <string name="result_open_in_browser">Open In Browser</string>
    <string name="browser">Browser</string>
    <string name="skip_loading">Skip Loading</string>
    <string name="loading">Loading…</string>
    <string name="loaded_links_number" formatted="true">%s loaded links. Skip loading</string>
    <string name="loaded_link_singular_number" formatted="true">%s loaded link. Skip loading</string>
    <string name="type_watching">Watching</string>
    <string name="category_account">Accounts</string>
    <string name="category_updates">Updates and backup</string>
    <string name="github">Github SunStream</string>
    <string name="github_upstream">Github CloudStream-3</string>
    <string name="github_upstream_desc">SunStream is based on Cloudstream-3, click to see the original repo</string>
    <string name="tmdb_name">TMDB</string>
    <string name="tmdb_desc">The Movie Database (themoviedb.org) is used to display every information about movies and tvshows.

    Disclaimer: This product uses the TMDB API but is not endorsed or certified by TMDB</string>
    <string name="lightnovel_fork">Light novel app by the original Cloudstream-3 devs</string>
    <string name="discord_fork">Join SunStream\'s Discord</string>
    <string name="benene">Give a benene to the devs</string>
    <string name="benene_des">Given benene</string>
    <string name="dns_pref">DNS over HTTPS</string>
    <string name="dns_pref_summary">Useful for bypassing ISP blocks</string>
    <string name="add_site_pref">Clone site</string>
    <string name="add_site_summary">Add a clone of an existing site, with a different URL</string>
    <string name="download_path_pref">Download path</string>
    <string name="enable_local_server_pref">Enable remote control</string>
    <string name="enable_local_server_sum">Will run a server on your local network when the app starts,
        With that feature you can control the playback of a media from a different device (when specifing the ip address).
        Restart to apply
    </string>
    <string name="show_local_ip_pref">Display the local ip of this device</string>
    <string name="show_local_ip_sum">Will ping google.com if the router is not found with the address 192.168.1.1</string>
    <string name="legal_notice">Disclaimer</string>
    <string name="legal_notice_key" translatable="false">legal_notice_key</string>
    <string name="category_general">General</string>
    <string name="category_providers">Providers</string>
    <string name="category_ui">Layout</string>
    <string name="category_about">About</string>
    <string name="category_player">Player</string>
    <string name="extensions">Extensions</string>
</resources>