<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
            android:key="@string/override_site_key"
            android:title="@string/add_site_pref"
            android:summary="@string/add_site_summary"
            android:icon="@drawable/ic_baseline_add_24" />

    <Preference
            android:key="@string/dns_key"
            android:title="@string/dns_pref"
            android:summary="@string/dns_pref_summary"
            android:icon="@drawable/ic_baseline_dns_24" />

    <Preference
            android:key="@string/download_path_key"
            android:title="@string/download_path_pref"
            android:icon="@drawable/netflix_download" />

    <SwitchPreference
        android:key="@string/enable_local_server_key"
        android:title="@string/enable_local_server_pref"
        android:summary="@string/enable_local_server_sum"
        android:icon="@drawable/ic_remote_control"
        android:defaultValue="false"/>

    <Preference
        android:key="@string/show_local_ip_key"
        android:title="@string/show_local_ip_pref"
        android:summary="@string/show_local_ip_sum"
        android:icon="@drawable/ic_remote_control" />


</PreferenceScreen>