<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryBlackBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/settings_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:visibility="gone"
                tools:visibility="visible">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:cardCornerRadius="25dp">

                    <ImageView
                        android:id="@+id/settings_profile_pic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/settings_profile_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="?attr/textColor"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    tools:text="Hello world" />
            </LinearLayout>

            <TextView
                android:id="@+id/settings_general"

                style="@style/SettingsItem"
                android:nextFocusDown="@id/settings_player"
                android:text="@string/category_general" />

            <TextView
                android:id="@+id/settings_player"
                style="@style/SettingsItem"

                android:nextFocusUp="@id/settings_general"
                android:nextFocusDown="@id/settings_providers"
                android:text="@string/category_player" />

            <TextView
                android:id="@+id/settings_providers"
                style="@style/SettingsItem"

                android:nextFocusUp="@id/settings_player"
                android:nextFocusDown="@id/settings_ui"
                android:text="@string/category_providers" />

            <TextView
                android:id="@+id/settings_ui"
                style="@style/SettingsItem"

                android:nextFocusUp="@id/settings_providers"
                android:nextFocusDown="@id/settings_updates"
                android:text="@string/category_ui" />

            <TextView
                android:id="@+id/settings_updates"
                style="@style/SettingsItem"

                android:nextFocusUp="@id/settings_ui"
                android:nextFocusDown="@id/settings_credits"
                android:text="@string/category_updates" />

            <TextView
                android:id="@+id/settings_credits"
                style="@style/SettingsItem"


                android:nextFocusUp="@id/settings_updates"
                android:nextFocusDown="@id/settings_extensions"
                android:text="@string/category_account" />

            <TextView
                android:id="@+id/settings_extensions"
                style="@style/SettingsItem"
                android:nextFocusUp="@id/settings_credits"
                android:nextFocusDown="@id/settings_about"
                android:text="@string/extensions" />

            <TextView
                android:id="@+id/settings_about"

                style="@style/SettingsItem"
                android:nextFocusUp="@id/settings_extensions"
                android:text="@string/category_about" />

            <LinearLayout
                android:id="@+id/remote_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:visibility="visible">
                <ImageView
                    android:id="@+id/remote_player_seek_rew"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:background="@drawable/video_tap_button_skip"
                    android:nextFocusLeft="@id/remote_player_seek_ffwd"
                    android:nextFocusRight="@id/remote_player_pause_play"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:scaleX="-1"
                    android:src="@drawable/netflix_skip_forward"
                    app:tint="@color/white"
                    android:tintMode="src_in"
                    tools:ignore="ContentDescription" />
                <ImageView
                    app:tint="@color/white"
                    android:id="@+id/remote_player_pause_play"
                    android:nextFocusLeft="@id/remote_player_seek_rew"
                    android:nextFocusRight="@id/remote_player_seek_ffwd"
                    android:nextFocusUp="@id/player_go_back"
                    android:nextFocusDown="@id/player_lock"

                    android:layout_gravity="center"

                    android:src="@drawable/netflix_pause"
                    android:background="@drawable/video_tap_button"

                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/remote_player_seek_ffwd"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/video_tap_button_skip"
                    android:nextFocusLeft="@id/remote_player_pause_play"
                    android:nextFocusRight="@id/remote_player_seek_rew"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/netflix_skip_forward"
                    app:tint="@color/white"
                    android:tintMode="src_in"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textColor="?attr/textColor"
                android:id="@+id/remote_device_name"
                android:visibility="gone"
                android:nextFocusUp="@id/settings_updates"
                android:text="@string/category_account" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/app_version"
                    android:textColor="?attr/textColor" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="•"
                    android:textColor="?attr/textColor" />
                <TextView
                    android:id="@+id/commit_hash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/commit_hash"
                    android:textColor="?attr/textColor" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>